# Realm

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.MD  build_run.bat  vcpkg.json
assets/shaders/: default.frag  default.vert  text.frag  text.vert  vulkan_triangle.frag  vulkan_triangle.vert
docs/: decisions.md  hot-reload-plan.md  roadmap.md
engine/: CMakeLists.txt
engine/include/: defines.h  engine.h
engine/include/asset/: asset.h
engine/include/core/: camera.h  event.h  logger.h
engine/include/memory/: arena.h  memory.h
engine/include/platform/: input.h  platform.h
engine/include/platform/io/: file_io.h
engine/include/profiler/: profiler.h
engine/include/renderer/: renderer_backend.h  renderer_frontend.h
engine/src/: application.h  defines.h  engine.c  engine.h  entry.h
engine/src/asset/: asset.c  asset.h  asset_internal.h  asset_table.h  font.c  font.h  shader.c  shader.h  texture.c  texture.h
engine/src/core/: asset.c  asset.h  camera.c  camera.h  event.c  event.h  font.c  font.h  logger.c  logger.h
engine/src/core/font/: msdf_wrapper.cpp  msdf_wrapper.h
engine/src/gui/: gui.c  gui.h
engine/src/memory/: arena.c  arena.h  memory.c  memory.h
engine/src/memory/containers/: dynamic_array.h
engine/src/platform/: input.c  input.h  platform.h  platform_linux.c  platform_macos.m  platform_win32.c  thread.h  thread_macos.c  thread_win32.c
engine/src/platform/io/: file_io.h  file_io_macos.c  file_io_win32.c
engine/src/platform/splash/: splash.c  splash.h  splash_linux.c  splash_win32.c
engine/src/profiler/: profiler.h
engine/src/renderer/: renderer_frontend.c  renderer_frontend.h  renderer_types.h
engine/src/renderer/opengl/: gl_mesh.c  gl_mesh.h  gl_renderer.c  gl_renderer.h  gl_shader.c  gl_shader.h  gl_text.c  gl_text.h  gl_texture.c  gl_texture.h  gl_types.h
engine/src/renderer/vulkan/: vk_buffer.c  vk_buffer.h  vk_commands.c  vk_commands.h  vk_descriptor.c  vk_descriptor.h  vk_device.c  vk_device.h  vk_frame_buffers.c  vk_frame_buffers.h  vk_image.c  vk_image.h  vk_index.c  vk_index.h  vk_instance.c  vk_instance.h  vk_pipeline.c  vk_pipeline.h  vk_renderer.c  vk_renderer.h  vk_renderpass.c  vk_renderpass.h  vk_shader.c  vk_shader.h  vk_swapchain.c  vk_swapchain.h  vk_sync.c  vk_sync.h  vk_text.c  vk_text.h  vk_texture.c  vk_texture.h  vk_types.h  vk_vertex.c  vk_vertex.h
engine/src/util/: assert.c  assert.h  clock.c  clock.h  math_types.h  misc.c  rand.h  rl_math.h  str.c  str.h
realm/: CMakeLists.txt
realm/include/: realm_app_api.h
realm/realm_app_module/: CMakeLists.txt
realm/realm_app_module/src/: game.c  game.h  realm_app_api.c
realm/src/: application.c  application.h  game.c  game.h  main.c  realm_app_loader.c  realm_app_loader.h
